fix posts listing - image posts visual bug on firefox

--- a/app/assets/stylesheets/modules/modules/_posts_listing.scss
+++ b/app/assets/stylesheets/modules/modules/_posts_listing.scss
@@ -156,6 +156,7 @@ $post-right-min-width: $post-actions-min-width + $post-component-spacing + $post
       display: inline-block;
       padding-bottom: 2px;
       border-bottom: 1px dashed #a0a0a0;
+      max-width: 100%;
 
       .image-wrapper {
         height: 42px;
